code/MG5_aMC_v2_8_2/bin/MG5_debug
#************************************************************
#*                     MadGraph5_aMC@NLO                    *
#*                                                          *
#*                *                       *                 *
#*                  *        * *        *                   *
#*                    * * * * 5 * * * *                     *
#*                  *        * *        *                   *
#*                *                       *                 *
#*                                                          *
#*                                                          *
#*         VERSION 2.8.2                 2020-10-30         *
#*                                                          *
#*    The MadGraph5_aMC@NLO Development Team - Find us at   *
#*    https://server06.fynu.ucl.ac.be/projects/madgraph     *
#*                                                          *
#************************************************************
#*                                                          *
#*               Command File for MadGraph5_aMC@NLO         *
#*                                                          *
#*     run as ./bin/mg5_aMC  filename                       *
#*                                                          *
#************************************************************
set group_subprocesses Auto
set ignore_six_quark_processes False
set low_mem_multicore_nlo_generation False
set complex_mass_scheme False
set gauge unitary
set loop_optimized_output True
set loop_color_flows False
set max_npoint_for_channel 0
set default_unset_couplings 99
set max_t_for_channel 99
set zerowidth_tchannel True
import model sm
define p = g u c d s u~ c~ d~ s~
define j = g u c d s u~ c~ d~ s~
define l+ = e+ mu+
define l- = e- mu-
define vl = ve vm vt
define vl~ = ve~ vm~ vt~
import model dim6top_LO_UFO
Traceback (most recent call last):
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/madgraph/interface/extended_cmd.py", line 1541, in onecmd
    return self.onecmd_orig(line, **opt)
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/madgraph/interface/extended_cmd.py", line 1490, in onecmd_orig
    return func(arg, **opt)
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/madgraph/interface/master_interface.py", line 281, in do_import
    self.cmd.do_import(self, *args, **opts)
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/madgraph/interface/madgraph_interface.py", line 5497, in do_import
    complex_mass_scheme=self.options['complex_mass_scheme'])
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/models/import_ufo.py", line 245, in import_model
    model = import_full_model(model_path, decay, prefix)
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/models/import_ufo.py", line 391, in import_full_model
    ufo_model = ufomodels.load_model(model_path, decay)
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/models/__init__.py", line 72, in load_model
    __import__(path_split[-1])
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/models/dim6top_LO_UFO/__init__.py", line 2, in <module>
    import particles
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/models/dim6top_LO_UFO/particles.py", line 7, in <module>
    from object_library import all_particles, Particle
  File "/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/models/dim6top_LO_UFO/object_library.py", line 268
    raise UFOError, "UFO does not support yet more than one occurence of CTParameters in the couplings values."
                  ^
SyntaxError: invalid syntax
Related File: /home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/models/dim6top_LO_UFO/object_library.py
                          MadGraph5_aMC@NLO Options    
                          ----------------    
        complex_mass_scheme 	:	False
    default_unset_couplings 	:	99
                      gauge 	:	unitary
         group_subprocesses 	:	Auto
  ignore_six_quark_processes 	:	False
           loop_color_flows 	:	False
      loop_optimized_output 	:	True
  low_mem_multicore_nlo_generation 	:	False
     max_npoint_for_channel 	:	0
          max_t_for_channel 	:	99
               stdout_level 	:	20 (user set)
         zerowidth_tchannel 	:	True

                         MadEvent Options    
                          ----------------    
     automatic_html_opening 	:	True
                    nb_core 	:	None
        notification_center 	:	True
                   run_mode 	:	2

                      Configuration Options    
                      ---------------------    
                        OLP 	:	MadLoop
                    amcfast 	:	amcfast-config
                   applgrid 	:	applgrid-config
                auto_update 	:	7
         cluster_local_path 	:	None
           cluster_nb_retry 	:	1
              cluster_queue 	:	None (user set)
         cluster_retry_wait 	:	300
               cluster_size 	:	100
      cluster_status_update 	:	(600, 30)
          cluster_temp_path 	:	None
               cluster_type 	:	condor
                    collier 	:	./HEPTools/lib
               cpp_compiler 	:	None
             crash_on_error 	:	False
               delphes_path 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/bin/PROC_dim6top_LO_UFO_each_coupling_order_1/None (user set)
                 eps_viewer 	:	None
        exrootanalysis_path 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/bin/PROC_dim6top_LO_UFO_each_coupling_order_1/None (user set)
              f2py_compiler 	:	None
          f2py_compiler_py2 	:	None
          f2py_compiler_py3 	:	None
                    fastjet 	:	None (user set)
           fortran_compiler 	:	None
                      golem 	:	None (user set)
                 hepmc_path 	:	None (user set)
                  hwpp_path 	:	None (user set)
                     lhapdf 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/HEPTools/lhapdf6/bin/lhapdf-config (user set)
                 lhapdf_py2 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/HEPTools/lhapdf6/bin/lhapdf-config (user set)
                 lhapdf_py3 	:	None
          madanalysis5_path 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/HEPTools/madanalysis5/madanalysis5 (user set)
           madanalysis_path 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/bin/PROC_dim6top_LO_UFO_each_coupling_order_1/None (user set)
  mg5amc_py8_interface_path 	:	None (user set)
                      ninja 	:	./HEPTools/lib
        output_dependencies 	:	external
            pythia-pgs_path 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/bin/PROC_dim6top_LO_UFO_each_coupling_order_1/None (user set)
               pythia8_path 	:	None (user set)
                    samurai 	:	None
               syscalc_path 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/bin/PROC_dim6top_LO_UFO_each_coupling_order_1/None (user set)
                    td_path 	:	/home/jaco/Documents/ML4EFT/code/MG5_aMC_v2.8.2/MG5_aMC_v2_8_2/bin/PROC_dim6top_LO_UFO_each_coupling_order_1/None (user set)
                text_editor 	:	nano (user set)
                thepeg_path 	:	None (user set)
                    timeout 	:	60
                web_browser 	:	None
